k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: edukan-ui
  labels:
    app: edukan-ui
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: edukan-ui
  type: ClusterIP
